@@ -1,3 +1,7 @@
+2014-11-09  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
+	* tools/cmp_gp_mp.sh:
+	  Ignore the content of "; Build date : ..." line in the .inc files.
+
 2014-10-03  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
 	* tools/build-register-db.pl, tools/device-help.pl,
 	  tools/device-manager.pl:
